<resources>
    <string name="app_name">Softworldusa</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SoftworldUSA</string>
    <string name="nav_header_subtitle">Student@softworld.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Reg">Registration</string>
    <string name="menu_Course">Course Info</string>
    <string name="menu_Assignment">Assignment</string>
    <string name="menu_Coursesch">Course Scheduled</string>
    <string name="menu_Chat">Chat</string>
    <string name="menu_AboutUs">AboutUs</string>
    <string name="menu_ReferFriend">Refer Friend</string>
    <string name="menu_ContactUs">Contact Us</string>





</resources>
