<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Reg"
            android:title="@string/menu_Reg"
            android:icon="@drawable/ic_user"/>
        <item
            android:id="@+id/nav_Course"
            android:title="@string/menu_Course"
            android:icon="@drawable/ic_content_"
            />
        <item
            android:id="@+id/nav_Assignments"
            android:title="@string/menu_Assignment"
            android:icon="@drawable/ic_assignment"/>
        <item
            android:id="@+id/nav_Coursesch"
            android:title="@string/menu_Coursesch"
            android:icon="@drawable/ic_timer"/>
        <item
            android:id="@+id/nav_chat"
            android:title="@string/menu_Chat"
            android:icon="@drawable/ic_chat"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_AboutUs"
                android:title="@string/menu_AboutUs"
                android:icon="@drawable/ic_home"
                />
            <item
                android:id="@+id/nav_Refer"
                android:title="@string/menu_ReferFriend"
                android:icon="@drawable/ic_share_black_24dp"/>
            <item
                android:id="@+id/nav_Contactus"
                android:title="@string/menu_ContactUs"
                android:icon="@drawable/ic_phone"/>
            <item
                android:id="@+id/nav_Logout"
                android:title="LogOut"
                android:icon="@drawable/ic_power"
                />
        </menu>
    </item>
</menu>
